<resources>
    <string name="app_name">UMemo</string>
    <string name="createKeepText">Добавить новую запись</string>
    <string name="hint_text_new_keep">Введите вашу заметку</string>
    <string name="saveKeepButton">Сохранить</string>
    <string name="deleteKeepTextButton">Удалить</string>
    <string name="allNotificationSwitch">Включить напоминание</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="create_table_menu_item">Добавить список</string>
    <string name="add_item_table">+\u0020\u0020\u0020\u0020\u0020Добавить строку</string>
    <string name="readyNotificationButton">Готово</string>
    <string name="celectetKeepColor">Цвет стикера</string>
    <string name="add_style_keep">Добавить стили</string>
    <string name="bold_switch">Жирность</string>
    <string name="italic_switch">Курсив</string>
    <string name="underline_switch">Подчеркивание</string>
    <string name="remove_edit_text">Удалить поле</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_keep">Заголовок</string>
    <string name="shareButton">Поделиться</string>
    <string name="notificationsOffSwitch">Напоминания выключены</string>
    <string name="notificationsOnSwitch">Напоминания включены</string>
    <string name="notRepeat">Не повторяется</string>
    <string name="paternsNitify">Шаблон уведомления</string>
    <string name="addNotify">Добавить уведомление</string>
    <string name="typeNotification">Уведомление</string>
    <string name="typeAlarmClock">Будильник</string>
    <string name="typeScoreExactly">Точно</string>
    <string name="typeScoreBeforeTime">За время до</string>
    <string name="typeScoreExactlyTime">В указанное время</string>
    <string name="variantDeltaTimeMinutes">мин. до</string>
    <string name="variantDeltaTimeHours">ч. до</string>
    <string name="variantDeltaTimeDays">дн. до</string>
    <string name="variantDeltaTimeMonths">мес. до</string>
    <string name="shareKeep">Отправить заметку</string>
    <string name="redactNotifications">Настройки напоминания</string>
    <string name="redactText">Редактировать текст</string>
    <string name="titleRepeat">Повторяется</string>
    <string name="cancelDialogButton">Удалить</string>
    <string name="accessDialogButton">OK</string>
    <string name="contentKeep">Содержание заметки</string>
    <string name="chooseFontFamily">Выберите шрифт</string>
    <string name="typeNotificationTitleDialog">Способ оповещения</string>
    <string name="notificationScoreTypeTitleDialog">Способ отсчета</string>
    <string name="beforeWord">За </string>
    <string name="inWord">В </string>
    <string name="setTimeTitleDialog">Укажите время</string>
    <string name="allKeeps">Все заметки</string>
    <string name="todayKeeps">Мероприятия на сегодня</string>
    <string name="tomorowKeeps">Мероприятия на завтра</string>
    <string name="colorsOnlyKeeps">Показать заметки только цвета</string>
    <string name="whiteKeeps">Белые</string>
    <string name="redKeeps">Красные</string>
    <string name="orangeKeeps">Оранжевые</string>
    <string name="yellowKeeps">Желтые</string>
    <string name="greenKeeps">Зеленые</string>
    <string name="lightBlueKeeps">Голубые</string>
    <string name="blueKeeps">Синие</string>
    <string name="purpurKeeps">Фиолетовые</string>
    <string name="everyWord">Каждые</string>
    <string name="onlyTime">Считая только</string>
    <string name="endWord">Окончание</string>
    <string name="to_profile">Профиль</string>
    <string name="make_check">Сделать отмечаемым</string>
    <string name="make_copy_keep">Создать копию заметки</string>
</resources>
