<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet_activity_notification"
    android:background="@color/colorSecondaryBackground"
    app:behavior_hideable="false"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:translationZ="8dp">

    <RelativeLayout
        android:id="@+id/top_redact_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryLight"
        android:elevation="4dp"
        android:translationZ="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/top_bottom_sheet_behavior"
            android:paddingTop="12dp"
            android:paddingStart="24dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhiteKeep"/>

        <ImageButton
            android:id="@+id/notifed_menu_button"
            style="@style/ButtonClear"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            app:srcCompat="@drawable/ic_more_vert_black_24dp"
            android:visibility="invisible"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/scroll_notifications_block">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:background="@drawable/material_white"
                android:elevation="1dp"
                android:translationZ="1dp"
                android:padding="4dp">

                <Switch
                    android:id="@+id/allNotificationSwitchDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/notificationsOnSwitch"
                    android:textOff="@string/notificationsOffSwitch"
                    android:textOn="@string/notificationsOnSwitch"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dateNotificationDialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:enabled="false"
                        android:onClick="SetDateDialog"
                        android:textSize="24sp"/>

                    <TextView
                        android:id="@+id/timeNotificationDialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:enabled="false"
                        android:onClick="SetTimeDialog"
                        android:textSize="24sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/repeat_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notRepeat"
                    android:layout_margin="4dp"
                    android:padding="2dp"
                    android:textSize="18sp"
                    android:elevation="8dp"
                    android:onClick="setRepeatDialog"/>

            </LinearLayout>

            <TextView
                android:id="@+id/patern_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paternsNitify"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:textSize="18sp"
                android:elevation="8dp"
                android:background="@drawable/material_white"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/all_notification_blocks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_new_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:background="@drawable/material_white"
                android:elevation="1dp"
                android:translationZ="1dp"
                android:padding="8dp"
                android:onClick="addNotificationButton">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    app:srcCompat="@drawable/ic_add_alarm_black_24dp"
                    android:onClick="addNotificationButton" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/addNotify"
                    android:textSize="18sp"
                    android:onClick="addNotificationButton"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>